<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMainActivity"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/super_rel">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/login_main_image"
                android:id="@+id/login_main_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/login_main_image"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textSize="24dp"
                android:layout_marginTop="24dp"
                android:id="@+id/tv_app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:layout_below="@id/tv_app_name"
                android:layout_centerHorizontal="true"
                android:text="@string/app_description"
                android:layout_marginHorizontal="56dp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_light"
                android:textSize="16dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_app_description"/>


            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:text="@string/create_an_account"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/white_border_rectangle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_app_description"
            android:layout_marginTop="36dp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_medium"
            android:id="@+id/btn_create_account"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:text="@string/login"
                android:background="@drawable/white_border_rectangle"
                android:layout_below="@id/btn_create_account"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_medium"
                android:layout_alignLeft="@id/btn_create_account"
                android:layout_alignRight="@id/btn_create_account"
                android:id="@+id/btn_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/btn_login"
                android:layout_centerHorizontal="true"
                android:text="@string/skip"
                android:padding="5sp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18dp"
                android:layout_marginTop="12dp"
                android:id="@+id/tv_skip"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_below="@id/tv_skip"
                android:layout_centerHorizontal="true"
                android:text="@string/alternate_login"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18dp"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_alternate_login"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_alternate_login"
                android:layout_marginTop="12dp"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_facebook"
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/image_facebook_login"/>

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_google"
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/image_google_login"/>


            </LinearLayout>






        </RelativeLayout>

    </ScrollView>

</RelativeLayout>